[project]
name = "aiosurge"
version = "1.5.15"
description = "Surge Python Async SDK"
requires-python = ">=3.9"
dependencies = [
    "aiocsv>=1.3.2",
    "aiofiles>=24.1.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "httpx>=0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "urllib3==2.4.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
    "pytest==8.3.5",
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "pytest-httpx>=0.35.0",
]
