[project]
name = "aiosurge"
version = "1.5.15"
description = "Surge Python Async SDK"
requires-python = ">=3.9"
dependencies = [
    "aiocsv>=1.3.2",
    "aiofiles>=24.1.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "httpx>=0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "urllib3==2.4.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
    "pytest==8.3.5",
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "pytest-httpx>=0.35.0",
    "tox>=4.25.0",
]

[tool.tox]
env_list = [
    "py39",
    "py310",
    "py311",
    "py312",
    "py313"
]
create_virtualenvs = true

# Base environment configuration for running tests under different Python versions
[tool.tox.env_run_base]
description = "Run tests under {base_python}"

deps = ["uv"]

commands = [
    ["uv", "run", "pytest"],
]
allowlist_externals = [
    "uv",
]
